--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
     "react-i18next": "^16.5.0",
+    "react-phone-number-input": "^3.4.14",
     "react-top-loading-bar": "^3.0.2",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
