--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "i18next-http-backend": "^3.0.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.561.0",
+    "minio": "^8.0.6",
     "react": "^19.2.3",
     "react-day-picker": "9.12.0",
     "react-dom": "^19.2.3",
